<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PictureActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dip"
        android:layout_height="300dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/photo"
        android:clickable="true"
        android:focusable="true"
        android:onClick="showBrowser"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageView"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/adults"
        android:text="@string/adults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView"
        android:textSize="18sp"/>

    <Spinner
        android:id="@+id/adults_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_toRightOf="@id/adults"
        android:entries="@array/num_tickets"
        android:layout_toEndOf="@id/adults" />

    <TextView
        android:id="@+id/seniors"
        android:text="@string/seniors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/adults"
        android:textSize="18sp"/>

    <Spinner
        android:id="@+id/seniors_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/adults"
        android:layout_toRightOf="@id/seniors"
        android:entries="@array/num_tickets"
        android:layout_toEndOf="@id/seniors" />

    <TextView
        android:id="@+id/students"
        android:text="@string/students"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/seniors"
        android:textSize="18sp"/>

    <Spinner
        android:id="@+id/students_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seniors"
        android:layout_toRightOf="@id/students"
        android:entries="@array/num_tickets"
        android:layout_toEndOf="@id/students" />

    <TextView
        android:id="@+id/price"
        android:text="@string/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/students"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tax"
        android:text="@string/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/price"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/total"
        android:text="@string/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tax"
        android:textSize="18sp"/>

</RelativeLayout>